# Lightout

./: .gitignore  README.md
f1_consumer/: Cargo.toml  bento_dashboard.html  build.rs
f1_consumer/src/: main.rs
f1_producer/: client.py  f1_pb2.py  f1_pb2_grpc.py  visualize_interactive.py  visualize_map.py
f1_web/: index.html  package-lock.json  package.json  tailwind.config.js
f1_web/src/: App.jsx  index.css
f1_web/src/components/: Card.jsx
f1_web/src/hooks/: useF1Socket.js
proto/: f1.proto
